fixes to cesar_save and cesar_rampr

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,7 @@
 url: https://cesaraustralia.github.io/seizer/
+repo:
+  url:
+    source: https://github.com/cesaraustralia/seizer/
 template:
   bootstrap: 5
 reference:
