--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -5,6 +5,18 @@ repo:
     source: https://github.com/cesaraustralia/seizer/
 template:
   bootstrap: 5
+  theme: arrow-light
+  bslib:
+    bg: "#EDEDED"
+    fg: "#06380D"
+    primary: "#000000"
+    code-bg: "#ddd7ce"
+    code-color: "#031e48"
+    base_font: {google: "Inter"}
+    heading_font: {google: "Inter"}
+  navbar:
+    bg: "#06380D"
+    fg: "#707070"
 reference:
 - title: Functions
   desc: Functions for use with ggplot2
