drop_elements added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,10 @@ export(color_subtitle)
 export(color_title)
 export(dark_grey)
 export(defense_matrix)
+export(drop_grid)
+export(drop_labels)
+export(drop_legend)
+export(drop_titles)
 export(galliano)
 export(gold_bullion)
 export(hobgoblin)
